# Game-Engine-7-2022

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Readme.md
Data/Shaders/: Color.shader
Example/: .gitignore  CMakeLists.txt
Example/Data/Shaders/: Textured.shader
Example/Deploy/Data/Textures/: Checker.animation  Checker.atlas
Example/Source/: CMakeLists.txt  Empty.cpp  Empty.hpp  Main.cpp  Precompiled.cpp  Precompiled.hpp
Example/Source/GameStates/: SpriteDemo.cpp  SpriteDemo.hpp
Example/Source/Scenes/: GameScene.cpp  GameScene.hpp  SpriteDemo.cpp  SpriteDemo.hpp
Examples/: CMakeLists.txt
Examples/Minimal/: CMakeLists.txt
Examples/Minimal/Source/: Main.cpp
Include/: Empty.hpp  Engine.hpp  EnginePublic.hpp
Include/Common/: Build.hpp  Common.hpp  Debug.hpp  (+14 more)
Source/: CMakeLists.txt  CMakeShared.cmake  Empty.hpp  Engine.cpp  Main.cpp  Precompiled.cpp  Precompiled.hpp
Source/Common/: Build.cpp  Build.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  NameRegistry.cpp  NonCopyable.hpp  Precompiled.hpp  ScopeGuard.hpp  Utility.cpp  Utility.hpp
Source/Common/Debug/: Debug.cpp
Source/Common/Logger/: Format.cpp  History.cpp  Logger.cpp  LoggerFormat.cpp  LoggerHistory.cpp  LoggerMessage.cpp  LoggerOutput.cpp  LoggerSeverity.cpp  LoggerSink.cpp  Message.cpp  Output.cpp  Sink.cpp
Source/Common/Utility/: NameRegistry.cpp  Utility.cpp
Source/Components/: Camera.cpp  CameraComponent.cpp  SpriteComponent.cpp  Transform.cpp  TransformComponent.cpp
Source/Config/: BuildInfo.cmake  BuildInfo.hpp.in  BuildVersion.cmake  BuildVersion.hpp.in
Source/Core/: Build.cpp  BuildInfo.cmake  BuildInfo.hpp.in  CMakeLists.txt  Config.cpp  ConfigSystem.cpp  Core.cpp  EngineMetrics.cpp  FrameRateLimiter.cpp  PerformanceMetrics.cpp  Precompiled.hpp  ServiceStorage.cpp
Source/Core/Config/: ConfigSystem.cpp
Source/Core/Resource/: ResourceManager.cpp
Source/Core/Script/: ScriptBinding.cpp  ScriptState.cpp  ScriptSystem.cpp
Source/Core/System/: EngineMetrics.cpp  FrameRateLimiter.cpp
Source/Editor/: CMakeLists.txt  Editor.cpp  EditorConsole.cpp  EditorRenderer.cpp  EditorShell.cpp  EditorSystem.cpp  GameStateEditor.cpp  ModelViewer.cpp  Precompiled.hpp  TextureEditor.cpp  TextureViewer.cpp
Source/Editor/Modules/: GameInstanceEditor.cpp  GameStateEditor.cpp  InputManagerEditor.cpp
Source/Engine/: Root.cpp
Source/Event/: CMakeLists.txt
Source/Game/: BaseScene.cpp  CMakeLists.txt  ComponentSystem.cpp  EntitySystem.cpp  EventRouter.cpp  GameFramework.cpp  GameInstance.cpp  GameScene.cpp  GameState.cpp  IdentitySystem.cpp  Scene.cpp  SceneRenderer.cpp  SceneSystem.cpp  TickTimer.cpp  UpdateTimer.cpp
Source/Game/Components/: CameraComponent.cpp  SpriteAnimationComponent.cpp  SpriteComponent.cpp  TransformComponent.cpp
Source/Game/Systems/: IdentitySystem.cpp  InterpolationSystem.cpp  SpriteAnimationSystem.cpp  SpriteSystem.cpp
Source/Graphics/: Buffer.cpp  CMakeLists.txt  Context.cpp  InputLayout.cpp  Precompiled.hpp  RenderContext.cpp  RenderState.cpp  Sampler.cpp  ScreenSpace.cpp  Shader.cpp  Sprite.cpp  SpriteList.cpp  SpriteRenderer.cpp  State.cpp  Texture.cpp  TextureAtlas.cpp  TextureView.cpp  VertexArray.cpp
Source/Graphics/Components/: CameraComponent.cpp  SpriteAnimationComponent.cpp  SpriteComponent.cpp
Source/Graphics/Sprite/: Sprite.cpp  SpriteAnimationList.cpp  SpriteDrawList.cpp  SpriteRenderer.cpp
Source/Graphics/Sprites/: Sprite.cpp  SpriteAnimation.cpp  SpriteAnimationList.cpp  SpriteDrawList.cpp  SpriteList.cpp  SpriteRenderer.cpp
Source/Graphics/Systems/: InterpolationSystem.cpp  SpriteSystem.cpp
Source/Logger/: CMakeLists.txt  Format.cpp  History.cpp  Logger.cpp  Message.cpp  Output.cpp  Precompiled.hpp  Sink.cpp
Source/Platform/: CMakeLists.txt  Image.cpp  InputDefinitions.cpp  InputManager.cpp  InputState.cpp  Platform.cpp  PlatformSystem.cpp  ResourceManager.cpp  Timer.cpp  TimerSystem.cpp  Window.cpp  WindowSystem.cpp
Source/Platform/FileSystem/: FileHandle.cpp  FileSystem.cpp  MemoryFileHandle.cpp  NativeFileDepot.cpp  NativeFileHandle.cpp
Source/Reflection/: CMakeLists.txt  Precompiled.hpp  Reflection.cpp  ReflectionBinding.cpp  ReflectionDetail.cpp  ReflectionDynamic.cpp  ReflectionGenerated.hpp.in  ReflectionGenerator.cpp  ReflectionRegistry.cpp  ReflectionTypes.cpp
Source/Renderer/: CMakeLists.txt  GameRenderer.cpp  Precompiled.hpp  StateRenderer.cpp
Source/Scene/: BaseScene.cpp  SceneInterface.cpp  SceneRenderer.cpp  SceneSystem.cpp
Source/Script/: CMakeLists.txt  Precompiled.hpp  ScriptState.cpp
Source/Scripting/: ScriptState.cpp  State.cpp
Source/Scripts/: ScriptState.cpp
Source/System/: CMakeLists.txt  Context.cpp  FileSystem.cpp  Image.cpp  InputDefinitions.cpp  InputManager.cpp  InputMapping.cpp  InputState.cpp  Platform.cpp  Precompiled.hpp  ResourceManager.cpp  Timer.cpp  TimerSystem.cpp  UpdateTimer.cpp  Window.cpp  WindowSystem.cpp
Source/System/FileSystem/: FileHandle.cpp  FileSystem.cpp  MemoryFileDepot.cpp  NativeFileDepot.cpp  NativeFileHandle.cpp
Tests/: CMakeLists.txt  TestEmpty.cpp  TestEvents.cpp  TestHelpers.hpp  TestReflection.cpp  TestScopeGuard.cpp  TestUtilities.cpp
Tests/Common/: CMakeLists.txt  Precompiled.hpp  TestCommon.cpp  TestEvent.cpp  TestHandleMap.cpp  TestName.cpp  TestResult.cpp  TestScopeGuard.cpp  TestStateMachine.cpp  TestUtility.cpp
Tests/Empty/: CMakeLists.txt  TestEmpty.cpp
Tests/Event/: CMakeLists.txt  TestEvent.cpp
Tests/Game/: CMakeLists.txt  Precompiled.hpp  TestGame.cpp  TestIdentitySystem.cpp
Tests/HandleMap/: CMakeLists.txt  TestHandleMap.cpp
Tests/Helpers/: CMakeLists.txt  TestHelpers.hpp
Tests/IdentitySystem/: CMakeLists.txt  TestIdentitySystem.cpp
Tests/Reflection/: CMakeLists.txt  Precompiled.hpp  TestReflection.cpp  TestReflectionCrossUnit.cpp  TestReflectionDynamic.cpp  TestReflectionHeader.hpp  TestReflectionStatic.cpp
Tests/Result/: CMakeLists.txt  TestResult.cpp
Tests/ScopeGuard/: CMakeLists.txt  TestScopeGuard.cpp
Tests/StateMachine/: CMakeLists.txt  TestStateMachine.cpp
Tests/Utility/: CMakeLists.txt  TestUtility.cpp
(+249 files in other folders)
